# manifest_parser_rs

./: Cargo.toml  Makefile  README.md  docs.md
src/: grammar.pest  lib.rs  main.rs  parser.pest
tests/: parses_tests.rs
